<resources>
    <string name="app_name">NB Stocks</string>
    <string name="stocks">Stocks</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?   </string>
    <string name="sign_up_here">Sign up Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="recovery_email">Recovery Email</string>
    <string name="recover_password">Recover Password</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="current_balance">Current Balance</string>
    <string name="view_more">View More</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="watchlist">Watchlist</string>
    <string name="see_all">See all</string>
    <string name="your_stocks">Your Stocks</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="stocks_details">Stocks Details</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="name">Name</string>
    <string name="overview">Overview</string>
    <string name="current">Current</string>
    <string name="day_low">Day Low</string>
    <string name="day_high">Day High</string>
    <string name="already_have_an_account">Already have an account?   </string>
    <string name="repeat_password">Repeat Password</string>
    <string name="remember_password">Remember password?   </string>
    <string name="send_recovery_email">Send Recovery Email</string>
    <string name="home">Home</string>
    <string name="companies">Companies</string>
    <string name="profile">Profile</string>
    <string name="or">or</string>
    <string name="amount_of_stocks">Stocks</string>
    <string name="amount_of_money_in_usd">Money in USD</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="about_nb_stocks">About NB Stocks</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="balance_visible">Balance Visible</string>
    <string name="application_settings">Application Settings</string>
    <string name="log_out">Log Out</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="add_all">Add all.</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="owned_stocks">Owned Stocks:</string>
    <string name="total_value">Total Value:</string>
    <string name="trade_history">Latest trade history</string>
    <string name="add">Add</string>
    <string name="processing">processing</string>
    <string name="info">NB Stocks is a stock trading application. You can manage your balance, track stock prices in realtime, and ease your life. NB Stocks is a unique app as it provides trade buy/sell functionality, has a built-in chart based on stock price changes, and provides real-time stock information, such as maximum and minimum value in 24 hours, monthly price change, latest trade history and so on.</string>
    <string name="close">Close</string>
</resources>