<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?android:attr/colorBackground"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHeader"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:tint="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mini_header" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibtnBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:padding="3dp"
            android:background="?attr/colorPrimary"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/lightGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/stocks_details"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/ibtnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ibtnBack" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCompanyLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:tint="?attr/colorOnSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivHeader"
            tools:src="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-light"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/ivCompanyLogo"
            app:layout_constraintStart_toEndOf="@id/ivCompanyLogo"
            app:layout_constraintTop_toTopOf="@id/ivCompanyLogo"
            tools:text="Company" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivCompanyLogo"
            tools:text="$250" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8BC34A"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tvPrice"
            app:layout_constraintTop_toBottomOf="@id/tvPrice"
            tools:text="+5.00%" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:indeterminate="true"
            app:indicatorColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/tlSwitchStocks"
            app:trackColor="?attr/colorOnPrimary"
            app:trackCornerRadius="5dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlSwitchStocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_cornered"
            android:backgroundTint="?attr/background"
            app:layout_constraintTop_toBottomOf="@id/ivCompanyLogo"
            app:tabIndicator="@drawable/shape_cornered"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="?attr/colorPrimary"
            app:tabIndicatorHeight="70dp"
            app:tabSelectedTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shape_cornered"
                android:text="@string/daily" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shape_cornered"
                android:text="@string/monthly" />
        </com.google.android.material.tabs.TabLayout>

        <com.anychart.AnyChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tlSwitchStocks" />

        <View
            android:id="@+id/viewCardPrices"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="15dp"
            android:background="@drawable/shape_stock_detail_card"
            app:layout_constraintTop_toBottomOf="@id/chart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/name"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/viewCardPrices"
            app:layout_constraintTop_toTopOf="@id/viewCardPrices" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/overview"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitleName"
            app:layout_constraintEnd_toEndOf="@id/viewCardPrices"
            app:layout_constraintTop_toTopOf="@+id/tvTitleName" />

        <View
            android:id="@+id/viewSeparator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/viewCardPrices"
            app:layout_constraintStart_toStartOf="@id/viewCardPrices"
            app:layout_constraintTop_toBottomOf="@id/tvTitleName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/current"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvTitleDayLow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSeparator" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleDayLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/day_low"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleCurrent"
            app:layout_constraintEnd_toEndOf="@id/viewCardPrices"
            app:layout_constraintEnd_toStartOf="@+id/tvTitleDayHigh"
            app:layout_constraintStart_toEndOf="@+id/tvTitleCurrent"
            app:layout_constraintTop_toTopOf="@id/tvTitleCurrent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleDayHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/day_high"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleCurrent"
            app:layout_constraintEnd_toEndOf="@id/viewCardPrices"
            app:layout_constraintStart_toEndOf="@+id/tvTitleDayLow"
            app:layout_constraintTop_toTopOf="@id/tvTitleCurrent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvTitleCurrent"
            app:layout_constraintStart_toStartOf="@+id/tvTitleCurrent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleCurrent"
            tools:text="$500" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLowPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvCurrentPrice"
            app:layout_constraintEnd_toEndOf="@+id/tvTitleDayLow"
            app:layout_constraintStart_toStartOf="@+id/tvTitleDayLow"
            app:layout_constraintTop_toTopOf="@id/tvCurrentPrice"
            tools:text="$500" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHighPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvCurrentPrice"
            app:layout_constraintEnd_toEndOf="@+id/tvTitleDayHigh"
            app:layout_constraintStart_toStartOf="@+id/tvTitleDayHigh"
            app:layout_constraintTop_toTopOf="@id/tvCurrentPrice"
            tools:text="$500" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBuy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/buy"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/lightGrey"
            android:textSize="20sp"
            android:textAllCaps="false"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@id/btnSell"
            app:layout_constraintStart_toStartOf="@id/viewCardPrices"
            app:layout_constraintTop_toBottomOf="@id/viewCardPrices" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke"
            android:text="@string/sell"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSecondary"
            android:textAllCaps="false"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="@id/btnBuy"
            app:layout_constraintEnd_toEndOf="@id/viewCardPrices"
            app:layout_constraintStart_toEndOf="@id/btnBuy"
            app:layout_constraintTop_toTopOf="@id/btnBuy" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>